# diffarray

./: .ghci  LICENSE  diffarray.cabal
src/Data/Array/: Diff.hs
tst/: TestMain.hs
