name:         diffarray
version:      0.1
license:      BSD3
license-file: LICENSE
maintainer:   Jacob Stanley <jacob@stanley.io>
category:     Data Structures
synopsis:     Fast immutable arrays.
description:  Diff arrays have an immutable interface, but rely on
              internal updates in place to provide fast functional
              update operator '//'.

build-type:    Simple
cabal-version: >=1.8

library
  hs-source-dirs: src
  exposed-modules: Data.Array.Diff

  build-depends:
      base  == 4.5.*
    , array == 0.4.*

  ghc-options:
    -O2 -Wall -funbox-strict-fields

test-suite test-diffarray
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  hs-source-dirs: tst
  build-depends:
      diffarray
    , base       == 4.*
    , array      == 0.4.*
    , QuickCheck == 2.5.*
